88 computer changes hr reports,lab report, Signed-off-by: Ruhunu <ruhunuDump@gmail.com>

--- a/src/main/webapp/dataAdmin/lab_investigation_list.xhtml
+++ b/src/main/webapp/dataAdmin/lab_investigation_list.xhtml
@@ -67,7 +67,7 @@
                             </f:facet>
                             <h:outputLabel value="#{ix.name}" ></h:outputLabel>
                         </p:column>
-                        <p:column headerText="Category"  style="width: 45%;" sortBy="#{ix.investigationCategory.name}">
+                        <p:column headerText="Category"  style="width: 45%;" sortBy="#{ix.investigationCategory.name}" filterBy="#{ix.investigationCategory.name}">
                             <f:facet name="header">
                                 <h:outputLabel value="Investigation Category"/>
                             </f:facet>
