--- a/src/main/webapp/hr/hr_report_attendance.xhtml
+++ b/src/main/webapp/hr/hr_report_attendance.xhtml
@@ -74,10 +74,11 @@
                                     <h:panelGroup rendered="#{hrReportController.reportKeyWord.department ne null}" >
                                         <h:outputLabel value="Department : #{hrReportController.reportKeyWord.department.name}"/>
                                         <br/>
-                                    </<h:panelGroup rendered="#{hrReportController.reportKeyWord.staff ne null}" >
+                                    </h:panelGroup>
+                                    <h:panelGroup rendered="#{hrReportController.reportKeyWord.staff ne null}" >
                                         <h:outputLabel value="Staff : #{hrReportController.reportKeyWord.staff.person.name}"/>
                                         <br/>
-                                    </h:panelGroup>h:panelGroup>
+                                    </h:panelGroup>
                                     <h:panelGroup rendered="#{hrReportController.reportKeyWord.staff ne null}" >
                                         <h:outputLabel value="Staff : #{hrReportController.reportKeyWord.staff.person.name}"/>
                                         <br/>
