--- a/src/main/webapp/hr/hr_report_staff_salary_payment_bank_summery.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_salary_payment_bank_summery.xhtml
@@ -93,7 +93,7 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Bank Name"/>
                                     </f:facet>
-                                    <p:outputLabel value="#{ss.bank.name}">
+                                    <p:outputLabel value="#{ss.stringBank}">
                                     </p:outputLabel>
                                 </p:column>
                                 <p:column rendered="#{hrReportController.netSalary}" style="text-align: right;">
