--- a/src/main/webapp/pharmacy/pharmacy_report_sale_by_billItems.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_sale_by_billItems.xhtml
@@ -46,7 +46,7 @@
                 <h:panelGrid columns="3">
                     <p:commandButton ajax="false" value="Process" action="#{pharmacySaleReport.createTableSaleBillItems()}"/>
                     <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
-                        <pe:exporter subTable="true" type="xlsx" target="sum1" fileName="report_grn_detail_by_supplier"  />
+                        <pe:exporter type="xlsx" target="sum1" fileName="report_grn_detail_by_supplier"  />
                     </p:commandButton>
                     <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" >
                         <p:printer target="panelPrint" />
