--- a/src/main/webapp/pharmacy/unit_report_by_item.xhtml
+++ b/src/main/webapp/pharmacy/unit_report_by_item.xhtml
@@ -4,7 +4,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:pe="http://primefaces.org/ui/extensions">
 
     <h:body>
 
@@ -43,31 +44,55 @@
 
                     <p:commandButton ajax="false" value="Fill" 
                                     action="#{reportsTransfer.fillItemCounts}" />
+                    <p:commandButton value="Excel" ajax="false">
+                            <pe:exporter type="xlsx" 
+                                         target="tbl" 
+                                         fileName="pharmacy_item_transaction_report"
+                                         />
+                        </p:commandButton>
 
 
                     <p:dataTable id="tbl"  value="#{reportsTransfer.itemCounts}"
                                  stickyHeader="true"
                                  var="i"  >
                         <p:column headerText="Item">
-                            #{i.itemBatch.item.name}
+                            <f:facet name="header">
+                                <p:outputLabel value="Item" />
+                            </f:facet>
+                            <p:outputLabel value="#{i.itemBatch.item.name}" />
                         </p:column>
                         <p:column headerText="Batch No">
-                            #{i.itemBatch.batchNo}
+                            <f:facet name="header">
+                                <p:outputLabel value="Batch No" />
+                            </f:facet>
+                            <p:outputLabel value="#{i.itemBatch.batchNo}" />
                         </p:column>
                         <p:column headerText="Purchase Rate" style="text-align: right;">
+                            <f:facet name="header">
+                                <p:outputLabel value="Purchase Rate" />
+                            </f:facet>
                             <h:outputLabel value="#{i.itemBatch.purcahseRate}">
                                 <f:convertNumber  pattern="#0.00"/>
                             </h:outputLabel>
                         </p:column>
                         <p:column headerText="Retail Rate" style="text-align: right;">
+                            <f:facet name="header">
+                                <p:outputLabel value="Retail Rate" />
+                            </f:facet>
                             <h:outputLabel value="#{i.itemBatch.retailsaleRate}">
                                 <f:convertNumber  pattern="#0.00"/>
                             </h:outputLabel>
                         </p:column>
                         <p:column headerText="Count" style="text-align: right;">
-                            #{i.count}
+                            <f:facet name="header">
+                                <p:outputLabel value="Count" />
+                            </f:facet>
+                            <p:outputLabel value="#{i.count}" />
                         </p:column>   
                         <p:column headerText="Gross Value" style="text-align: right;">
+                            <f:facet name="header">
+                                <p:outputLabel value="Gross Value" />
+                            </f:facet>
                             <h:outputLabel value="#{i.gross}">
                                 <f:convertNumber  pattern="#0.00"/>
                             </h:outputLabel>  
@@ -78,6 +103,9 @@
                             </f:facet>
                         </p:column>
                         <p:column headerText="Margin Value" style="text-align: right;">
+                            <f:facet name="header">
+                                <p:outputLabel value="Margin Value" />
+                            </f:facet>
                             <h:outputLabel value="#{i.margin}">
                                 <f:convertNumber pattern="#0.00" />
                             </h:outputLabel> 
@@ -88,6 +116,9 @@
                             </f:facet>
                         </p:column>
                         <p:column headerText="Net Value" style="text-align: right;">
+                            <f:facet name="header">
+                                <p:outputLabel value="Net Value" />
+                            </f:facet>
                             <h:outputLabel value="#{i.net}">
                                 <f:convertNumber pattern="#0.00" />
                             </h:outputLabel>   
