--- a/src/main/webapp/reportCashier/report_cashier_item_count_by_user.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_item_count_by_user.xhtml
@@ -45,7 +45,7 @@
                         <f:facet name="footer">
                             <h:outputLabel style="float: right" value="Cachier : #{sessionController.loggedUser.webUserPerson.name} " />
                         </f:facet>
-                        <h:panelGrid columns="6" styleClass="noPrintButton" >
+                        <h:panelGrid columns="2" styleClass="noPrintButton" >
                             <h:outputLabel value="From Date"/>
                             <p:calendar id="frmDate" value="#{commonReport.fromDate}" navigator="true"  pattern="dd MMMM yyyy HH:mm:ss" >
                             </p:calendar>
@@ -58,9 +58,16 @@
                                             forceSelection="true"
                                             var="w" itemLabel="#{w.webUserPerson.name}" itemValue="#{w}"
                                             value="#{commonReport.webUser}" ></p:autoComplete>
-                                            
+                                            <h:outputLabel styleClass="noPrintButton" value="Departmnet"/>
                             <au:department value="#{commonReport.department}" />
- 
+                            <h:outputLabel styleClass="noPrintButton" value="Only Hos Fee"/>
+                            <p:selectBooleanCheckbox id="cbHos" value="#{commonReport.onlyHosFee}" >
+                                <p:ajax event="change" process="@this" update="cbStaff @this" listener="#{commonReport.listnerHosFee}" />
+                            </p:selectBooleanCheckbox>
+                            <h:outputLabel styleClass="noPrintButton" value="Only Staff Fee"/>
+                            <p:selectBooleanCheckbox id="cbStaff" value="#{commonReport.onlyStaffFee}" >
+                                <p:ajax event="change" process="@this" update="cbHos @this" listener="#{commonReport.listnerStaffFee}" />
+                            </p:selectBooleanCheckbox>
                         </h:panelGrid>
                         <p:panel id="reportPrint">
                             <p:dataTable value="#{commonReport.itemCountRows}" var="ir" id="tb1" rowIndexVar="i">
