--- a/src/main/webapp/channel/channel_report_agent_channels.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_channels.xhtml
@@ -65,19 +65,19 @@
                             </f:facet>
                             <p:outputLabel value="#{i+1}" />
                         </p:column>
-                        <p:column rendered="#{channelReportController.institution eq null}">
+                        <p:column rendered="#{channelReportController.institution eq null}" style="width: 500px!important;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;">
                             <f:facet name="header">
                                 <p:outputLabel value="Agent" />
                             </f:facet>
                             <p:outputLabel value="#{b.creditCompany.name} - #{b.creditCompany.institutionCode}" />
                         </p:column>
-                        <p:column>
+                        <p:column >
                             <f:facet name="header">
                                 <p:outputLabel value="Ref. No" />
                             </f:facet>
                             <p:outputLabel value="#{b.singleBillItem.agentRefNo}" />
                         </p:column>
-                        <p:column>
+                        <p:column styleClass="noPrintButton">
                             <f:facet name="header">
                                 <p:outputLabel value="Bill No" />
                             </f:facet>
@@ -89,17 +89,17 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <p:outputLabel value="Appo. No" />
+                                <p:outputLabel value="App No" />
                             </f:facet>
                             <p:outputLabel value="#{b.singleBillSession.serialNo}" />
                         </p:column>
-                        <p:column>
+                        <p:column style="width: 200px!important;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;">
                             <f:facet name="header">
                                 <p:outputLabel value="Consultant" />
                             </f:facet>
                             <p:outputLabel value="#{b.staff.person.name}" />
                         </p:column>
-                        <p:column>
+                        <p:column style="width: 10px!important;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;">
                             <f:facet name="header">
                                 <p:outputLabel value="C / R" />
                             </f:facet>
@@ -108,7 +108,7 @@
                             <p:outputLabel value="Refund - " rendered="#{b.refunded}" style="color: red;"/>
                             <p:outputLabel value="#{b.refundedBill.paymentMethod}" rendered="#{b.refunded}" style="color: red;"/>
                         </p:column>
-                        <p:column>
+                        <p:column styleClass="noPrintButton" style="width: 50px!important;">
                             <f:facet name="header">
                                 <p:outputLabel value="Created Date" />
                             </f:facet>
@@ -116,7 +116,7 @@
                                 <f:convertDateTime pattern="dd MMMM yyyy hh:mm:ss a" />
                             </p:outputLabel>
                         </p:column>
-                        <p:column>
+                        <p:column styleClass="noPrintButton" >
                             <f:facet name="header">
                                 <p:outputLabel value="Appo. Date" />
                             </f:facet>
@@ -124,7 +124,7 @@
                                 <f:convertDateTime pattern="dd MMMM yyyy" />
                             </p:outputLabel>
                         </p:column>
-                        <p:column styleClass="numberCol" >
+                        <p:column style="width: 5px!important;text-align: right;">
                             <f:facet name="header">
                                 <p:outputLabel value="Doc Fee" />
                             </f:facet>
@@ -137,7 +137,7 @@
                                 </p:outputLabel>  
                             </f:facet>
                         </p:column>
-                        <p:column styleClass="numberCol">
+                        <p:column style="width: 5px!important;text-align: right;">
                             <f:facet name="header">
                                 <p:outputLabel value="Hos Fee" />
                             </f:facet>
@@ -150,7 +150,7 @@
                                 </p:outputLabel>  
                             </f:facet>
                         </p:column>
-                        <p:column styleClass="numberCol">
+                        <p:column style="width: 5px!important;text-align: right;">
                             <f:facet name="header">
                                 <p:outputLabel value="Total" />
                             </f:facet>
