--- a/src/main/webapp/reportCashier/report_cashier_item_count_by_user.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_item_count_by_user.xhtml
@@ -56,9 +56,9 @@
                             <h:outputLabel styleClass="noPrintButton" value="User Name"/>
                             <p:autoComplete converter="webUs" completeMethod="#{webUserController.completeUser}" styleClass="noPrintButton"
                                             forceSelection="true"
-                                            var="w" itemLabel="#{w.webUserPerson.name}" itemValue="#{w}"
+                                            var="w" itemLabel="#{w.webUserPerson.name}" itemValue="#{w}" placeholder="User Name"
                                             value="#{commonReport.webUser}" ></p:autoComplete>
-                                            <h:outputLabel styleClass="noPrintButton" value="Departmnet"/>
+                            <h:outputLabel styleClass="noPrintButton" value="Departmnet" />
                             <au:department value="#{commonReport.department}" />
                             <h:outputLabel styleClass="noPrintButton" value="Only Hos Fee"/>
                             <p:selectBooleanCheckbox id="cbHos" value="#{commonReport.onlyHosFee}" >
@@ -95,15 +95,41 @@
                                         <f:convertNumber pattern="#,##0" />
                                     </h:outputLabel>
                                 </p:column>
-                                <p:column styleClass="numberCol" >
+                                <p:column styleClass="numberCol" rendered="#{(!commonReport.onlyHosFee and !commonReport.onlyStaffFee)or commonReport.onlyStaffFee}">
                                     <f:facet name="header">
-                                        <p:outputLabel value="Value" />
+                                        <p:outputLabel value="Staff" />
+                                    </f:facet>
+                                    <h:outputLabel value="#{ir.staffFee}" >
+                                        <f:convertNumber pattern="#,##0.00" />
+                                    </h:outputLabel>
+                                    <f:facet name="footer">
+                                        <p:outputLabel value="#{commonReport.billTotalStaff}" style="float: right;">
+                                            <f:convertNumber pattern="#,##0.00" />
+                                        </p:outputLabel>
+                                    </f:facet>
+                                </p:column>
+                                <p:column styleClass="numberCol" rendered="#{(!commonReport.onlyHosFee and !commonReport.onlyStaffFee)or commonReport.onlyHosFee}" >
+                                    <f:facet name="header">
+                                        <p:outputLabel value="Hos" />
+                                    </f:facet>
+                                    <h:outputLabel value="#{ir.hosFee}" >
+                                        <f:convertNumber pattern="#,##0.00" />
+                                    </h:outputLabel>
+                                    <f:facet name="footer">
+                                        <p:outputLabel value="#{commonReport.billTotalHos}" style="float: right;">
+                                            <f:convertNumber pattern="#,##0.00" />
+                                        </p:outputLabel>
+                                    </f:facet>
+                                </p:column>
+                                <p:column styleClass="numberCol" rendered="#{!commonReport.onlyHosFee and !commonReport.onlyStaffFee}">
+                                    <f:facet name="header">
+                                        <p:outputLabel value="Total" />
                                     </f:facet>
                                     <h:outputLabel value="#{ir.value}" >
                                         <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                     <f:facet name="footer">
-                                        <p:outputLabel value="#{commonReport.billTotal}" >
+                                        <p:outputLabel value="#{commonReport.billTotal}" style="float: right;">
                                             <f:convertNumber pattern="#,##0.00" />
                                         </p:outputLabel>
                                     </f:facet>
@@ -137,15 +163,41 @@
                                         <f:convertNumber pattern="#,##0" />
                                     </h:outputLabel>
                                 </p:column>
-                                <p:column styleClass="numberCol" >
+                                <p:column styleClass="numberCol" rendered="#{(!commonReport.onlyHosFee and !commonReport.onlyStaffFee)or commonReport.onlyStaffFee}">
                                     <f:facet name="header">
-                                        <p:outputLabel value="Value" />
+                                        <p:outputLabel value="Staff" />
+                                    </f:facet>
+                                    <h:outputLabel value="#{ir.staffFee}" >
+                                        <f:convertNumber pattern="#,##0.00" />
+                                    </h:outputLabel>
+                                    <f:facet name="footer">
+                                        <p:outputLabel value="#{commonReport.billTotalCancelStaff}" style="float: right;">
+                                            <f:convertNumber pattern="#,##0.00" />
+                                        </p:outputLabel>
+                                    </f:facet>
+                                </p:column>
+                                <p:column styleClass="numberCol" rendered="#{(!commonReport.onlyHosFee and !commonReport.onlyStaffFee)or commonReport.onlyHosFee}">
+                                    <f:facet name="header">
+                                        <p:outputLabel value="Hos" />
+                                    </f:facet>
+                                    <h:outputLabel value="#{ir.hosFee}" >
+                                        <f:convertNumber pattern="#,##0.00" />
+                                    </h:outputLabel>
+                                    <f:facet name="footer">
+                                        <p:outputLabel value="#{commonReport.billTotalCancelHos}" style="float: right;">
+                                            <f:convertNumber pattern="#,##0.00" />
+                                        </p:outputLabel>
+                                    </f:facet>
+                                </p:column>
+                                <p:column styleClass="numberCol" rendered="#{!commonReport.onlyHosFee and !commonReport.onlyStaffFee}">
+                                    <f:facet name="header">
+                                        <p:outputLabel value="Total" />
                                     </f:facet>
                                     <h:outputLabel value="#{ir.value}" >
                                         <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                     <f:facet name="footer">
-                                        <p:outputLabel value="#{commonReport.billTotalCancel}" >
+                                        <p:outputLabel value="#{commonReport.billTotalCancel}" style="float: right;">
                                             <f:convertNumber pattern="#,##0.00" />
                                         </p:outputLabel>
                                     </f:facet>
@@ -179,15 +231,41 @@
                                         <f:convertNumber pattern="#,##0" />
                                     </h:outputLabel>
                                 </p:column>
-                                <p:column styleClass="numberCol" >
+                                <p:column styleClass="numberCol" rendered="#{(!commonReport.onlyHosFee and !commonReport.onlyStaffFee)or commonReport.onlyStaffFee}" >
                                     <f:facet name="header">
-                                        <p:outputLabel value="Value" />
+                                        <p:outputLabel value="Staff" />
+                                    </f:facet>
+                                    <h:outputLabel value="#{ir.staffFee}" >
+                                        <f:convertNumber pattern="#,##0.00" />
+                                    </h:outputLabel>
+                                    <f:facet name="footer">
+                                        <p:outputLabel value="#{commonReport.billTotalRefundStaff}" style="float: right;">
+                                            <f:convertNumber pattern="#,##0.00" />
+                                        </p:outputLabel>
+                                    </f:facet>
+                                </p:column>
+                                <p:column styleClass="numberCol" rendered="#{(!commonReport.onlyHosFee and !commonReport.onlyStaffFee)or commonReport.onlyHosFee}">
+                                    <f:facet name="header">
+                                        <p:outputLabel value="Hos" />
+                                    </f:facet>
+                                    <h:outputLabel value="#{ir.hosFee}" >
+                                        <f:convertNumber pattern="#,##0.00" />
+                                    </h:outputLabel>
+                                    <f:facet name="footer">
+                                        <p:outputLabel value="#{commonReport.billTotalRefundHos}" style="float: right;">
+                                            <f:convertNumber pattern="#,##0.00" />
+                                        </p:outputLabel>
+                                    </f:facet>
+                                </p:column>
+                                <p:column styleClass="numberCol" rendered="#{!commonReport.onlyHosFee and !commonReport.onlyStaffFee}">
+                                    <f:facet name="header">
+                                        <p:outputLabel value="Total" />
                                     </f:facet>
                                     <h:outputLabel value="#{ir.value}" >
                                         <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                     <f:facet name="footer">
-                                        <p:outputLabel value="#{commonReport.billTotalRefund}" >
+                                        <p:outputLabel value="#{commonReport.billTotalRefund}" style="float: right;">
                                             <f:convertNumber pattern="#,##0.00" />
                                         </p:outputLabel>
                                     </f:facet>
@@ -196,7 +274,13 @@
 
                             <f:facet name="footer">
                                 <p:outputLabel value="Net Total : " />
-                                <p:outputLabel value="#{commonReport.billTotal+commonReport.billTotalCancel+commonReport.billTotalRefund}" >
+                                <p:outputLabel value="#{commonReport.billTotal+commonReport.billTotalCancel+commonReport.billTotalRefund}" rendered="#{!commonReport.onlyHosFee and !commonReport.onlyStaffFee}" >
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </p:outputLabel>
+                                <p:outputLabel value="#{commonReport.billTotalHos+commonReport.billTotalCancelHos+commonReport.billTotalRefundHos}" rendered="#{commonReport.onlyHosFee}">
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </p:outputLabel>
+                                <p:outputLabel value="#{commonReport.billTotalStaff+commonReport.billTotalCancelStaff+commonReport.billTotalRefundStaff}" rendered="#{commonReport.onlyStaffFee}">
                                     <f:convertNumber pattern="#,##0.00" />
                                 </p:outputLabel>
                             </f:facet>
