--- a/src/main/webapp/pharmacy/pharmacy_report_bht_issue_bill.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_bht_issue_bill.xhtml
@@ -47,7 +47,8 @@
                                 <f:facet name="header">
                                     <h:outputLabel value="BHT Issue From"/>
                                     <h:outputLabel value="#{reportsTransfer.fromDepartment.name}"/> 
-                                    <h:panelGrid columns="4">
+                                    <br/>
+                                    <!--<h:panelGrid columns="4">-->
                                         <h:outputLabel value="From  "/>
                                         <h:outputLabel value="#{reportsTransfer.fromDate}">
                                             <f:convertDateTime pattern="dd/MM/yy" ></f:convertDateTime>
@@ -56,7 +57,7 @@
                                         <h:outputLabel value="#{reportsTransfer.toDate}">
                                             <f:convertDateTime pattern="dd/MM/yy" ></f:convertDateTime>
                                         </h:outputLabel>
-                                    </h:panelGrid>
+                                    <!--</h:panelGrid>-->
                                 </f:facet>
 
                                 <p:column headerText="BHT No">
