--- a/src/main/webapp/pharmacy/pharmacy_report_category_vice_movement.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_category_vice_movement.xhtml
@@ -66,7 +66,7 @@
                         <h:outputLabel value="#{pharmacySaleReport.fromDate}"  >
                             <f:convertDateTime pattern="dd MMMM yyyy" />
                         </h:outputLabel>
-                        <h:outputLabel value="To Date"/>
+                        <h:outputLabel value=" To Date :"/>
                         <h:outputLabel value="#{pharmacySaleReport.toDate}"  >
                             <f:convertDateTime pattern="dd MMMM yyyy" />
                         </h:outputLabel>   
