--- a/src/main/webapp/pharmacy/pharmacy_report_unit_issue_department_by_department.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_unit_issue_department_by_department.xhtml
@@ -49,8 +49,8 @@
                                 <f:facet name="header">
                                     <h:outputLabel value="Unit Issue From "/>
                                     <h:outputLabel value="#{reportsTransfer.fromDepartment.name}"/> 
-
-                                    <h:panelGrid columns="4">
+                                    <br/>
+                                    <!--<h:panelGrid columns="4">-->
                                         <h:outputLabel value="From  "/>
                                         <h:outputLabel value="#{reportsTransfer.fromDate}">
                                             <f:convertDateTime pattern="dd/MM/yy" ></f:convertDateTime>
@@ -59,7 +59,7 @@
                                         <h:outputLabel value="#{reportsTransfer.toDate}">
                                             <f:convertDateTime pattern="dd/MM/yy" ></f:convertDateTime>
                                         </h:outputLabel>
-                                    </h:panelGrid>
+                                    <!--</h:panelGrid>-->
                                 </f:facet>
 
                                 <p:column headerText="Department">
